--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -8,10 +8,10 @@
     tools:context=".SignUpActivity">
 
     <TextView
-        android:id="@+id/tv_title"
+        android:id="@+id/tv_sign_up_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="48dp"
+        android:layout_marginStart="48dp"
         android:layout_marginTop="52dp"
         android:fontFamily="@font/sb_aggro_b"
         android:text="CREATE\nACCOUNT"
@@ -20,150 +20,250 @@
         app:layout_constraintBottom_toTopOf="@id/sv_sign_up"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"/>
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <ScrollView
         android:id="@+id/sv_sign_up"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
         android:layout_marginBottom="60dp"
         android:fillViewport="true"
         android:scrollbars="none"
-        app:layout_constraintBottom_toTopOf="@id/btn_sign_up"
+        app:layout_constraintBottom_toTopOf="@id/btn_sign_up_summit"
         app:layout_constraintHeight_percent="0.6"
-        app:layout_constraintTop_toBottomOf="@id/tv_title"
+        app:layout_constraintTop_toBottomOf="@id/tv_sign_up_title"
         app:layout_constraintVertical_chainStyle="packed">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingHorizontal="48dp">
-
-
-            <TextView
-                android:id="@+id/tv_signUp_name"
-                style="@style/title_string"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/name"
-                app:layout_constraintBottom_toTopOf="@id/et_signUp_name"
-                app:layout_constraintStart_toStartOf="@id/et_signUp_name"
-                app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="40dp">
 
             <EditText
-                android:id="@+id/et_signUp_name"
+                android:id="@+id/et_sign_up_input_id"
                 style="@style/edit_string"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/please_input_name"
-                android:inputType="text"
-                android:singleLine="true"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_signUp_name" />
-
-            <TextView
-                android:id="@+id/tv_signUp_id"
-                style="@style/title_string"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:text="@string/id"
-                app:layout_constraintBottom_toTopOf="@id/et_signUp_id"
-                app:layout_constraintStart_toStartOf="@id/et_signUp_id"
-                app:layout_constraintTop_toBottomOf="@id/et_signUp_name" />
-
-            <EditText
-                android:id="@+id/et_signUp_id"
-                style="@style/edit_string"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/please_input_id"
+                android:backgroundTint="@color/white"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:hint="@string/id"
                 android:inputType="textVisiblePassword"
                 android:singleLine="true"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_signUp_id" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tv_signUp_password"
-                style="@style/title_string"
+                android:id="@+id/tv_sign_up_err_id_input"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:text="@string/password"
-                app:layout_constraintBottom_toTopOf="@id/et_signUp_password"
-                app:layout_constraintStart_toStartOf="@id/et_signUp_password"
-                app:layout_constraintTop_toBottomOf="@id/et_signUp_id" />
+                android:layout_marginStart="4dp"
+                android:text="@string/please_input_id"
+                android:textColor="@color/white"
+                android:textSize="11sp"
+                android:visibility="visible"
+                app:layout_constraintStart_toStartOf="@id/et_sign_up_input_id"
+                app:layout_constraintTop_toBottomOf="@id/et_sign_up_input_id" />
 
             <EditText
-                android:id="@+id/et_signUp_password"
+                android:id="@+id/et_sign_up_input_password"
                 style="@style/edit_string"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/please_input_password"
+                android:layout_marginTop="12dp"
+                android:backgroundTint="@color/white"
+                android:hint="@string/password"
                 android:inputType="textPassword"
                 android:singleLine="true"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_signUp_password" />
+                app:layout_constraintTop_toBottomOf="@id/tv_sign_up_err_id_input" />
 
             <TextView
-                android:id="@+id/tv_signUp_check_password"
-                style="@style/title_string"
+                android:id="@+id/tv_sign_up_err_password_input"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:text="@string/check_password"
-                app:layout_constraintBottom_toTopOf="@id/et_signUp_check_password"
-                app:layout_constraintStart_toStartOf="@id/et_signUp_check_password"
-                app:layout_constraintTop_toBottomOf="@id/et_signUp_password" />
+                android:layout_marginStart="4dp"
+                android:text="@string/please_input_password"
+                android:textColor="@color/warning"
+                android:textSize="11sp"
+                android:visibility="gone"
+                app:layout_constraintStart_toStartOf="@id/et_sign_up_input_password"
+                app:layout_constraintTop_toBottomOf="@id/et_sign_up_input_password" />
 
             <EditText
-                android:id="@+id/et_signUp_check_password"
+                android:id="@+id/et_sign_up_input_check_password"
                 style="@style/edit_string"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/please_input_check_password"
+                android:layout_marginTop="12dp"
+                android:backgroundTint="@color/white"
+                android:hint="@string/check_password"
                 android:inputType="textPassword"
                 android:singleLine="true"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_signUp_check_password" />
+                app:layout_constraintTop_toBottomOf="@id/tv_sign_up_err_password_input" />
 
             <TextView
-                android:id="@+id/tv_signUp_mbti"
-                style="@style/title_string"
+                android:id="@+id/tv_sign_up_err_check_password_input"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:text="MBTI"
-                app:layout_constraintBottom_toTopOf="@id/spinner_signUp_mbti"
-                app:layout_constraintStart_toStartOf="@id/spinner_signUp_mbti"
-                app:layout_constraintTop_toBottomOf="@id/et_signUp_check_password" />
+                android:layout_marginStart="4dp"
+                android:text="@string/please_input_check_password"
+                android:textColor="@color/warning"
+                android:textSize="11sp"
+                android:visibility="gone"
+                app:layout_constraintStart_toStartOf="@id/et_sign_up_input_check_password"
+                app:layout_constraintTop_toBottomOf="@id/et_sign_up_input_check_password" />
+
+            <EditText
+                android:id="@+id/et_sign_up_input_name"
+                style="@style/edit_string"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="48dp"
+                android:backgroundTint="@color/white"
+                android:focusableInTouchMode="true"
+                android:hint="@string/name"
+                android:inputType="text"
+                android:singleLine="true"
+                app:layout_constraintTop_toBottomOf="@id/tv_sign_up_err_check_password_input" />
+
+            <TextView
+                android:id="@+id/tv_sign_up_err_name_input"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:text="@string/please_input_name"
+                android:textColor="@color/warning"
+                android:textSize="11sp"
+                android:visibility="gone"
+                app:layout_constraintStart_toStartOf="@id/et_sign_up_input_name"
+                app:layout_constraintTop_toBottomOf="@id/et_sign_up_input_name" />
+
+            <EditText
+                android:id="@+id/et_sign_up_input_birth"
+                style="@style/edit_string"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:backgroundTint="@color/white"
+                android:hint="@string/brith"
+                android:inputType="number"
+                android:singleLine="true"
+                app:layout_constraintTop_toBottomOf="@id/tv_sign_up_err_name_input" />
+
+            <TextView
+                android:id="@+id/tv_sign_up_err_birth_input"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:text="@string/please_input_birth"
+                android:textColor="@color/white"
+                android:textSize="11sp"
+                android:visibility="visible"
+                app:layout_constraintStart_toStartOf="@id/et_sign_up_input_birth"
+                app:layout_constraintTop_toBottomOf="@id/et_sign_up_input_birth" />
+
+            <EditText
+                android:id="@+id/et_sign_up_input_email_id"
+                style="@style/edit_string"
+                android:layout_width="88dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:backgroundTint="@color/white"
+                android:hint="이메일"
+                android:inputType="textVisiblePassword"
+                android:singleLine="true"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_sign_up_err_birth_input" />
+
+            <TextView
+                android:id="@+id/email_at"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:text="@"
+                android:textColor="@color/white"
+                app:layout_constraintBottom_toBottomOf="@id/et_sign_up_input_email_id"
+                app:layout_constraintEnd_toStartOf="@id/et_sign_up_input_email_domain"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                app:layout_constraintStart_toEndOf="@id/et_sign_up_input_email_id"
+                app:layout_constraintTop_toTopOf="@id/et_sign_up_input_email_id" />
+
+            <EditText
+                android:id="@+id/et_sign_up_input_email_domain"
+                style="@style/edit_string"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="12dp"
+                android:backgroundTint="@color/white"
+                android:inputType="textVisiblePassword"
+                android:singleLine="true"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="@id/email_at"
+                app:layout_constraintEnd_toStartOf="@id/spinner_sign_up_email_domain"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                app:layout_constraintStart_toEndOf="@id/email_at"
+                app:layout_constraintTop_toTopOf="@id/et_sign_up_input_email_id" />
+
+            <Spinner
+                android:id="@+id/spinner_sign_up_email_domain"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="4dp"
+                android:background="@drawable/spinner_background"
+                app:layout_constraintBottom_toBottomOf="@id/et_sign_up_input_email_id"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                app:layout_constraintStart_toEndOf="@id/et_sign_up_input_email_domain"
+                app:layout_constraintTop_toTopOf="@id/et_sign_up_input_email_id" />
+
+            <TextView
+                android:id="@+id/tv_sign_up_err_email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="4dp"
+                android:focusableInTouchMode="true"
+                android:text=""
+                android:textColor="@color/warning"
+                android:textSize="11sp"
+                android:visibility="gone"
+                app:layout_constraintStart_toStartOf="@id/et_sign_up_input_email_id"
+                app:layout_constraintTop_toBottomOf="@id/et_sign_up_input_email_id" />
 
             <Spinner
                 android:id="@+id/spinner_signUp_mbti"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="24dp"
                 android:background="@drawable/spinner_background"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_signUp_mbti" />
+                android:entries="@array/mbti_array"
+                app:layout_constraintTop_toBottomOf="@id/tv_sign_up_err_email" />
 
+            <TextView
+                android:id="@+id/tv_sign_up_err_mbti_input"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="4dp"
+                android:text="@string/please_input_name"
+                android:textColor="@color/warning"
+                android:textSize="11sp"
+                android:visibility="gone"
+                app:layout_constraintStart_toStartOf="@id/spinner_signUp_mbti"
+                app:layout_constraintTop_toBottomOf="@id/spinner_signUp_mbti" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
     </ScrollView>
 
     <android.widget.Button
-        android:id="@+id/btn_sign_up"
+        android:id="@+id/btn_sign_up_summit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="48dp"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/inactive_rectangle_button"
+        android:background="@drawable/active_rectangle_button"
         android:text="@string/sign_up"
         android:textColor="#172A87"
         android:textSize="15sp"
@@ -173,5 +273,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/sv_sign_up"
         app:layout_constraintVertical_chainStyle="packed" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
