--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,9 +10,9 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginBottom="24dp"
         app:layout_constraintBottom_toTopOf="@id/btn_to_main"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginBottom="24dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -22,8 +22,8 @@
                 android:id="@+id/iv_home_photo"
                 android:layout_width="180dp"
                 android:layout_height="180dp"
-                android:background="@drawable/photo_frame"
                 android:layout_marginTop="40dp"
+                android:background="@drawable/photo_frame"
                 android:clipToOutline="true"
                 android:scaleType="centerCrop"
                 android:src="@drawable/illho"
@@ -37,7 +37,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
                 android:fontFamily="@font/sb_aggro_b"
-                android:text="Name"
+                android:text=""
                 android:textColor="@color/white"
                 android:textSize="40sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -50,7 +50,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/sb_aggro_l"
-                android:text="abcde12345"
+                android:text=""
                 android:textColor="#66FFFFFF"
                 android:textSize="15dp"
                 app:layout_constraintEnd_toEndOf="@id/tv_home_name"
@@ -88,7 +88,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
                 android:fontFamily="@font/sb_aggro_b"
-                android:text="33"
+                android:text=""
                 android:textColor="@color/white"
                 android:textSize="30sp"
                 app:layout_constraintBottom_toBottomOf="@id/tv_age"
@@ -117,7 +117,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
                 android:fontFamily="@font/sb_aggro_b"
-                android:text="ENTP"
+                android:text=""
                 android:textColor="@color/white"
                 android:textSize="30sp"
                 app:layout_constraintBottom_toBottomOf="@id/tv_mbti"
